--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ pydantic>=2.4.0,<3.0.0
 requests>=2.31.0,<3.0.0
 python-dotenv>=1.0.0,<2.0.0
 notion-client>=2.2.1,<3.0.0
+
+# AI/LLM Dependencies
+anthropic>=0.7.0,<1.0.0
+openai>=1.0.0,<2.0.0
